# unofficial-polestar-api

./: .env.example  CLAUDE.md  README.md  ha_integration_README.md  pyproject.toml
custom_components/polestar/: button.py  coordinator.py  demo.py  entity.py  lock.py  manifest.json  number.py  select.py  sensor.py  switch.py  time.py
src/polestar_api/: connection.py  vehicle.py
src/polestar_api/models/: charging.py  climate.py  common.py
src/polestar_api/services/: charge_timer.py  climate.py  invocation.py  odometer.py  target_soc.py
tests/: test_live_integration.py  test_models.py
