[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unofficial-polestar-api"
version = "0.4.0"
description = "Unofficial async Python client for Polestar vehicle APIs"
readme = "README.md"
license = "MIT"
authors = [{ name = "kildahldev" }]
maintainers = [{ name = "Manuel Villarejo", email = "mjvillarejo@gmail.com" }]
requires-python = ">=3.12"
keywords = ["polestar", "ev", "car", "api", "grpc", "home-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Framework :: AsyncIO",
    "Topic :: Home Automation",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx>=0.27",
    "grpclib>=0.4.7",
]

[project.urls]
Homepage = "https://github.com/mvillarejo/unofficial-polestar-api"
Issues = "https://github.com/mvillarejo/unofficial-polestar-api/issues"
Upstream = "https://github.com/kildahldev/unofficial-polestar-api"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "python-dotenv>=1.0",
    "certifi>=2024.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/polestar_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests that connect to live Polestar APIs (deselect with '-m \"not live\"')",
]
